add wellbeing score appi

--- a/css/wellbeing-score.css
+++ b/css/wellbeing-score.css
@@ -10,9 +10,11 @@
 .happy-content {
   padding: 25px;
 }
+
 .workload-content {
   padding: 25px;
 }
+
 .anxiety-content {
   padding: 25px;
 }
@@ -22,11 +24,13 @@
   display: flex;
   gap: 60px;
 }
+
 .give-score-workload-content {
   padding: 25px;
   display: flex;
   gap: 60px;
 }
+
 .give-score-anxiety-content {
   padding: 25px;
   display: flex;
@@ -36,9 +40,11 @@
 .happy-score {
   padding: 10px;
 }
+
 .workload-score {
   padding: 10px;
 }
+
 .anxiety-score {
   padding: 10px;
 }
@@ -46,9 +52,16 @@
 .happy-score:hover {
   border-bottom: 2px solid black;
 }
+
 .workload-score:hover {
   border-bottom: 2px solid black;
 }
+
 .anxiety-score:hover {
   border-bottom: 2px solid black;
+}
+
+#addScoreContainer {
+  display: flex;
+  justify-content: center;
 }
